--- a/SOS.html
+++ b/SOS.html
@@ -14,7 +14,7 @@
 </head>
 <body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
-    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
+    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto main-spacing">
     <div class="container">
         <div class="header">
             <h1>لیست شماره‌های اضطراری</h1>
