--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
-    <main class="container mx-auto px-6 py-10 flex-1 flex flex-col justify-center items-center" style="margin-top:80px; margin-bottom:80px; min-height:calc(100vh - 160px);">
+    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto main-spacing">
     <section class="bg-white p-6 rounded-xl shadow-lg mb-6 w-full max-w-xl text-center">
       <h2 class="text-xl font-bold text-blue-900 mb-3" id="features-title"></h2>
       <ul class="list-disc list-inside space-y-2 text-gray-700 text-right text-sm" id="features-list"></ul>
