--- a/main.html
+++ b/main.html
@@ -193,7 +193,7 @@
 </head>
 <body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
-    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
+    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto main-spacing">
     <div id="root"></div>
     <script type="text/babel">
       const ProjectCard = ({ project, collaborators }) => {
