--- a/news.html
+++ b/news.html
@@ -177,7 +177,7 @@
 </head>
 <body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
-    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
+    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto main-spacing">
       <h1 class="text-center my-4">📢 آخرین اخبار</h1>
       <div id="news-container"></div>
       <div class="text-center mt-8">
