--- a/vasl.html
+++ b/vasl.html
@@ -8,7 +8,7 @@
 </head>
 <body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
-    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
+    <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto main-spacing">
       <h1>ابزارهای اتصال (وصل)</h1>
       <div id="vasl-list" class="vasl-list"></div>
     </main>
