--- a/main.html
+++ b/main.html
@@ -3,342 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>لیست پروژه‌های برای ایران</title>
-  <script src="src/react.production.min.js"></script>
-  <script src="src/react-dom.production.min.js"></script>
-  <script src="src/babel.min.js"></script>
+  <title>پروژه‌های برای ایران</title>
   <link href="src/tailwind.min.css" rel="stylesheet">
   <link href="src/font-face.css" rel="stylesheet">
   <link href="src/main-style.css" rel="stylesheet">
-  <style>
-    html, body {
-      height: 100%;
-      min-height: 100vh;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      height: 100vh;
-      background: linear-gradient(to bottom, #eff6ff, #dbeafe);
-    }
-    main {
-      flex: 1;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      background: #f9fafb;
-    }
-    .bg-gray-800 {
-      background: #324c95 !important; /* رنگ تیره‌تر */
-      color: #f1f5f9 !important; /* متن روشن‌تر */
-      border: none;
-      box-shadow: 0 4px 24px 0 rgba(30,41,59,0.10), 0 1.5px 4px 0 rgba(30,41,59,0.08);
-      transition: box-shadow 0.2s;
-    }
-    .bg-gray-800:hover {
-      box-shadow: 0 8px 32px 0 rgba(30,41,59,0.18), 0 2px 8px 0 rgba(30,41,59,0.12);
-    }
-    .member-img {
-      width: 48px;
-      height: 48px;
-      border-radius: 50%;
-      border: 2px solid #64748b;
-      background: #fff;
-      object-fit: cover;
-      box-shadow: 0 2px 8px 0 rgba(30,41,59,0.10);
-    }
-    .project-title {
-      font-size: 1.35rem;
-      font-weight: 800;
-      color: #38bdf8 !important;
-      letter-spacing: -0.5px;
-      text-shadow: 0 1px 2px rgba(0,0,0,0.08);
-    }
-    .project-desc {
-      font-size: 1.08rem;
-      color: #e0e7ef;
-      margin-top: 0.5rem;
-      line-height: 1.9;
-      font-weight: 400;
-    }
-    .project-status {
-      font-weight: 700;
-      letter-spacing: 0.2px;
-      border-radius: 9999px;
-      box-shadow: 0 1px 4px 0 rgba(30,41,59,0.10);
-      border: 1.5px solid #fff3;
-    }
-    .section h2, .section h1, .section h3 {
-      text-align:center;
-      color: #324c95 !important;
-      font-weight: 900;
-      text-shadow: 0 1px 2px rgba(0,0,0,0.07);
-    }
-    .text-center a, .text-center div {
-      color: #000000 !important;
-    }
-    .container {
-      padding: 0.5rem 0.2rem;
-      max-width: 900px;
-    }
-    .project-collaborators {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.5rem;
-      margin-top: 1rem;
-      justify-content: flex-start;
-      align-items: center;
-    }
-    .project-collaborators .collab-img {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      border: 1.5px solid #38bdf8;
-      object-fit: cover;
-      box-shadow: 0 1px 4px 0 rgba(30,41,59,0.10);
-      transition: transform 0.15s;
-      margin: 0;
-      padding: 0;
-    }
-    .project-collaborators .collab-img:hover {
-      transform: scale(1.12) rotate(-3deg);
-      box-shadow: 0 2px 8px 0 rgba(30,41,59,0.18);
-    }
-    @media (max-width: 600px) {
-      .container {
-        padding: 0.5rem 0.1rem;
-        max-width: 100vw;
-      }
-      .bg-gray-800 {
-        padding: 1rem !important;
-      }
-      .project-title {
-        font-size: 1.1rem;
-      }
-      .project-desc {
-        font-size: 0.98rem;
-      }
-      .project-collaborators .collab-img {
-        width: 26px;
-        height: 26px;
-      }
-      .flex.flex-wrap.gap-6.justify-center {
-        display: grid !important;
-        grid-template-columns: repeat(2, 1fr) !important;
-        gap: 0.5rem 0.2rem !important;
-        justify-items: center !important;
-        align-items: start !important;
-      }
-      .flex.flex-wrap.gap-6.justify-center > div {
-        width: 100% !important;
-        min-width: 0 !important;
-        margin: 0 !important;
-        padding: 0 !important;
-        display: flex !important;
-        flex-direction: column !important;
-        align-items: center !important;
-      }
-      .member-img {
-        width: 36px !important;
-        height: 36px !important;
-        margin-bottom: 0.15rem !important;
-      }
-      .flex.flex-wrap.gap-6.justify-center div > a > div {
-        font-size: 0.85rem !important;
-        margin-top: 0.1rem !important;
-        word-break: break-word;
-        text-align: center;
-        max-width: 60px;
-      }
-      .flex.flex-wrap.gap-6.justify-center {
-        gap: 0.2rem !important;
-        justify-content: center !important;
-        align-items: flex-start !important;
-      }
-    }
-    @media (min-width: 601px) {
-      .flex.flex-wrap.gap-6.justify-center {
-        gap: 1.2rem !important;
-        justify-content: center !important;
-        align-items: flex-start !important;
-      }
-      .flex.flex-wrap.gap-6.justify-center > div {
-        width: auto !important;
-        min-width: 0 !important;
-        margin: 0 !important;
-        padding: 0 !important;
-        display: flex !important;
-        flex-direction: column !important;
-        align-items: center !important;
-      }
-      .member-img {
-        width: 48px !important;
-        height: 48px !important;
-        margin-bottom: 0.2rem !important;
-      }
-      .flex.flex-wrap.gap-6.justify-center div > a > div {
-        font-size: 1rem !important;
-        margin-top: 0.2rem !important;
-        max-width: 80px;
-        text-align: center;
-      }
-    }
-  </style>
 </head>
 <body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
     <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto main-spacing">
-    <div id="root"></div>
-    <script type="text/babel">
-      const ProjectCard = ({ project, collaborators }) => {
-        const statusText = {
-          completed: "انجام‌شده",
-          in_progress: "در دست اقدام",
-          not_started: "انجام‌نشده"
-        };
-        const statusColor = {
-          completed: "bg-green-500",
-          in_progress: "bg-yellow-500",
-          not_started: "bg-red-500"
-        };
-        const projectCollaborators = collaborators.filter(collab =>
-          project.collaborators.includes(collab.id)
-        );
-
-        return (
-          <div className="bg-gray-800 p-6 rounded-lg mb-8">
-            <a href={project.pageLink} className="project-title hover:underline">
-              {project.title}
-            </a>
-            <p className="project-desc">{project.description}</p>
-            <span className={`project-status inline-block mt-2 px-3 py-1 text-sm ${statusColor[project.status]}`}
-              style={{color:'#fff', background: project.status==='completed' ? '#22c55e' : project.status==='in_progress' ? '#eab308' : '#ef4444'}}>
-              {statusText[project.status]}
-            </span>
-            <div className="mt-4">
-              <a href={project.pageLink} target="_blank" rel="noopener noreferrer" className="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-5 rounded-lg transition-all duration-150 text-sm shadow">
-                ورود به پروژه
-              </a>
+      <div id="simple-projects-list" class="max-w-2xl mx-auto">
+        <!-- پروژه‌ها اینجا بارگذاری می‌شوند -->
+      </div>
+      <script>
+      fetch('json/projects.json')
+        .then(res => res.json())
+        .then(data => {
+          const list = document.getElementById('simple-projects-list');
+          list.innerHTML = data.projects.map(p => `
+            <div class="bg-white rounded-xl shadow-lg p-6 mb-6 border border-blue-100 hover:shadow-2xl transition">
+              <h2 class="text-xl font-bold text-blue-800 mb-2">${p.title}</h2>
+              <p class="text-gray-700 text-base">${p.description}</p>
             </div>
-            {projectCollaborators.length > 0 && (
-              <div className="project-collaborators">
-                {projectCollaborators.map(collab => (
-                  <a key={collab.id} href={collab.link} target="_blank" rel="noopener noreferrer">
-                    <img 
-                      src={collab.image || "https://via.placeholder.com/100"} 
-                      alt={collab.name} 
-                      className="collab-img" 
-                      title={collab.name}
-                    />
-                  </a>
-                ))}
-              </div>
-            )}
-          </div>
-        );
-      };
-
-      const App = () => {
-        const [projects, setProjects] = React.useState([]);
-        const [collaborators, setCollaborators] = React.useState([]);
-        const [loading, setLoading] = React.useState(true);
-
-        React.useEffect(() => {
-          Promise.all([
-            fetch('json/projects.json').then(res => res.json()),
-            fetch('json/collaborators.json').then(res => res.json())
-          ])
-            .then(([projectsRes, collaboratorsRes]) => {
-              const sortedProjects = projectsRes.projects.sort((a, b) => {
-                const statusOrder = { completed: 1, in_progress: 2, not_started: 3 };
-                return statusOrder[a.status] - statusOrder[b.status];
-              });
-              setProjects(sortedProjects);
-              setCollaborators(collaboratorsRes.collaborators);
-              setLoading(false);
-            })
-            .catch(error => {
-              console.error('Error loading JSON files:', error);
-              setLoading(false);
-            });
-        }, []);
-
-        if (loading) {
-          return <div className="text-center py-10">در حال بارگذاری...</div>;
-        }
-
-        return (
-          <div className="container mx-auto py-10 px-4">
-            <h1 className="text-4xl font-bold text-center mb-10">لیست پروژه‌ها</h1>
-            <div className="section">
-              {projects.map(project => (
-                <ProjectCard key={project.id} project={project} collaborators={collaborators} />
-              ))}
-            </div>
-            <div className="section mt-10">
-              <h2 className="text-2xl font-semibold border-b border-gray-500 pb-2 mb-6">همه همکاران</h2>
-              <div className="flex flex-wrap gap-6 justify-center">
-                {collaborators.map(collab => (
-                  <div key={collab.id} className="text-center" style={{margin:'0 0.5rem 1.2rem 0'}}>
-  <a href={collab.link} target="_blank" rel="noopener noreferrer">
-    <img 
-      src={collab.image || "https://via.placeholder.com/100"} 
-      alt={collab.name} 
-      className="member-img mb-2" 
-      style={{margin:'0 auto', display:'block'}}
-    />
-    <div style={{color:'#1e293b', fontWeight:'bold', fontSize:'1rem', marginTop:'0.2rem'}}>{collab.name}</div>
-    {collab.position && (
-      <div className="text-xs text-blue-700 mt-1">{collab.position}</div>
-    )}
-    {collab.description && !collab.position && (
-      <div className="text-xs text-blue-700 mt-1">{collab.description}</div>
-    )}
-  </a>
-</div>
-                ))}
-              </div>
-            </div>
-            <div className="section mt-10 text-center">
-              <h2 className="text-2xl font-semibold border-b border-gray-500 pb-2 mb-6">ارتباط با ما</h2>
-              <p>
-  <a href="https://t.me/+1wxyzaCKatliYTg0" className="inline-flex items-center text-blue-400 hover:underline" style={{color:'#229ED9', fontWeight:'bold'}} title="گروه تلگرام">
-    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="#229ED9" style={{marginLeft:'5px'}}><path d="M12 2C6.477 2 2 6.477 2 12c0 5.523 4.477 10 10 10s10-4.477 10-10c0-5.523-4.477-10-10-10zm4.93 7.36l-1.43 6.77c-.21.93-.76 1.16-1.54.72l-2.13-1.57-1.03.99c-.11.11-.2.2-.41.2l.15-2.13 3.88-3.5c.17-.15-.04-.24-.26-.09l-4.8 3.02-2.07-.65c-.9-.28-.92-.9.19-1.33l8.1-3.12c.38-.14.72.09.6.64z"/></svg>
-  </a>
-</p>
-<p>
-  <a href="https://t.me/+_7RLwYQ8sJo0MWRk" className="inline-flex items-center text-blue-400 hover:underline" style={{color:'#229ED9', fontWeight:'bold'}} title="کانال تلگرام">
-    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="#229ED9" style={{marginLeft:'5px'}}><path d="M12 2C6.477 2 2 6.477 2 12c0 5.523 4.477 10 10 10s10-4.477 10-10c0-5.523-4.477-10-10-10zm4.93 7.36l-1.43 6.77c-.21.93-.76 1.16-1.54.72l-2.13-1.57-1.03.99c-.11.11-.2.2-.41.2l.15-2.13 3.88-3.5c.17-.15-.04-.24-.26-.09l-4.8 3.02-2.07-.65c-.9-.28-.92-.9.19-1.33l8.1-3.12c.38-.14.72.09.6.64z"/></svg>
-  </a>
-</p>
-            </div>
-          </div>
-        );
-      };
-
-      ReactDOM.render(<App />, document.getElementById('root'));
-    </script>
+          `).join('');
+        });
+      </script>
     </main>
     <footer id="main-footer"></footer>
     <script src="src/common-header-footer.js"></script>
-    <style>
-@media (max-width: 600px) {
-  .flex.flex-wrap.gap-6.justify-center > div {
-    width: 48%;
-    min-width: 120px;
-    margin-bottom: 1.2rem;
-  }
-  .member-img {
-    width: 38px !important;
-    height: 38px !important;
-  }
-}
-</style>
-  </body>
+</body>
 </html>
