--- a/businesses.html
+++ b/businesses.html
@@ -11,6 +11,10 @@
 <body class="min-h-screen text-gray-800 flex flex-col">
     <header id="main-header"></header>
     <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto main-spacing">
+      <div class="bg-yellow-100 border border-yellow-400 text-yellow-800 rounded px-4 py-3 mb-8 text-center" role="alert">
+        اگر شما هم کسب‌وکاری دارید و از مردم حمایت می‌کنید، به ما پیام بدهید تا نام کسب‌وکار شما را هم به این لیست اضافه کنیم.<br>
+        پیشاپیش از شما ممنونیم که به فکر مردم ایران هستید.
+      </div>
       <h1 class="text-2xl font-bold text-blue-900 mb-8 text-center">کسب‌وکارهای حامی مردم</h1>
       <div id="businesses-list"></div>
     </main>
